--- a/admin.html
+++ b/admin.html
@@ -7,7 +7,7 @@
     <script type="module" src="components/header.js"></script>
     <script type="module" src="components/footer.js"></script>
     <script type="module" src="js/user.js"></script>
-    <!-- <script type="module" src="js/auth.js"></script> -->
+    <script type="module" src="js/auth.js"></script>
   </head>
 
   <body>
